--- a/keycloak/keycloak/5-keycloak-instance.yaml
+++ b/keycloak/keycloak/5-keycloak-instance.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: k8s.keycloak.org/v2alpha1
 kind: Keycloak
 metadata:
@@ -13,8 +14,8 @@ spec:
     httpPort: 8090
     tlsSecret: my-tls-secret
   hostname:
-    adminUrl: 'https://keycloak-rhdh-operator.apps.cluster-qr8h2.dynamic.redhatworkshops.io'
-    hostname: keycloak-rhdh-operator.apps.cluster-qr8h2.dynamic.redhatworkshops.io
+    adminUrl: 'https://keycloak-rhdh-operator.apps.cluster-<GUID>.dynamic.redhatworkshops.io'
+    hostname: keycloak-rhdh-operator.apps.cluster-<GUID>.dynamic.redhatworkshops.io
   instances: 1
   db:
     vendor: postgres
@@ -25,3 +26,4 @@ spec:
     passwordSecret:
       name: keycloak-db-secret
       key: password
+...
