--- a/keycloak/keycloak/6-keycloak-realm.yaml
+++ b/keycloak/keycloak/6-keycloak-realm.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: k8s.keycloak.org/v2alpha1
 kind: KeycloakRealmImport
 metadata:
@@ -36,15 +37,16 @@ spec:
         protocol: openid-connect
         publicClient: false
         redirectUris:
-          - "https://rhdh.apps.cluster-qr8h2.dynamic.redhatworkshops.io/api/auth/*"
-        rootUrl: "https://rhdh.apps.cluster-qr8h2.dynamic.redhatworkshops.io"
-        adminUrl: "https://rhdh.apps.cluster-qr8h2.dynamic.redhatworkshops.io"
-        baseUrl: "https://rhdh.apps.cluster-qr8h2.dynamic.redhatworkshops.io"
+          - "https://rhdh.apps.cluster-<GUID>.dynamic.redhatworkshops.io/api/auth/*"
+        rootUrl: "https://rhdh.apps.cluster-<GUID>.dynamic.redhatworkshops.io"
+        adminUrl: "https://rhdh.apps.cluster-<GUID>.dynamic.redhatworkshops.io"
+        baseUrl: "https://rhdh.apps.cluster-<GUID>.dynamic.redhatworkshops.io"
         webOrigins:
           - "+"
-        secret: "developer-hub-secret"  # Leave empty — Keycloak will auto-generate or set it after creation
+        secret: "developer-hub-secret"
         standardFlowEnabled: true
         implicitFlowEnabled: false
         directAccessGrantsEnabled: false
         serviceAccountsEnabled: false
         authorizationServicesEnabled: false
+...
