--- a/rhdh/rhdh/6-backstage.yaml
+++ b/rhdh/rhdh/6-backstage.yaml
@@ -22,7 +22,8 @@ spec:
     replicas: 1
     route:
       enabled: true
-      host: rhdh.apps.cluster-qr8h2.dynamic.redhatworkshops.io
-      subdomain: apps.cluster-qr8h2.dynamic.redhatworkshops.io
+      host: rhdh.apps.cluster-<GUID>.dynamic.redhatworkshops.io
+      subdomain: apps.cluster-<GUID>.dynamic.redhatworkshops.io
   database:
     enableLocalDb: true
+...
